--- a/_site.yml
+++ b/_site.yml
@@ -5,14 +5,14 @@ navbar:
   right:
     - text: "About Me"
       href: about.html
-    - text: "Dashboard"      
-      href: dashboard.html
+    - text: "HW4"      
+      href: plotly.html
     - icon: fa-envelope fa-lg
       href: mailto:fm2751@cumc.columbia.edu
     - icon: fa-github fa-lg
       href: http://github.com/FionaMa01/
     - icon: fa-linkedin fa-lg
-      href: https://www.linkedin.com/in/fiona-ma-945842255/
+      href: https://www.linkedin.com/in/fengyi-fiona-ma-945842255/
 output:
   html_document:
     theme: paper
